--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -12,6 +12,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+      - name: Read CLI version
+        uses: SebRollen/toml-action@v1.0.2
+        id: read_cli_version
+        with:
+          file: './cli/Cargo.toml'
+          field: 'package.version'
+      - name: Check Release Version is Same as CLI Version
+        if: ${{ github.ref }} != v${{ steps.read_cli_version.outputs.value }}
+        run: |
+          echo "Tag version ${{ github.ref }} is not equal to Cargo.toml version {{ steps.read_cli_version.outputs.value }}"; exit 1
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
