improve error message

--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -21,7 +21,9 @@ jobs:
       - name: Check Release Version is Same as CLI Version
         if: ${{ github.ref }} != test${{ steps.read_cli_version.outputs.value }}
         run: |
-          echo "Tag version ${{ github.ref }} is not equal to Cargo.toml version {{ steps.read_cli_version.outputs.value }}"; exit 1
+          echo "Tag version ${{ github.ref }} is not equal to Cargo.toml version ${{ steps.read_cli_version.outputs.value }}";
+          echo "Did you forget to update version in Cargo.toml?"
+          exit 1
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
