--- a/.github/workflows/release-cli.yaml
+++ b/.github/workflows/release-cli.yaml
@@ -19,7 +19,7 @@ jobs:
           file: './cli/Cargo.toml'
           field: 'package.version'
       - name: Check Release Version is Same as CLI Version
-        if: endsWith(${{ github.ref }}, ${{ steps.read_cli_version.outputs.value }})
+        if: ${{ !endsWith(github.ref, steps.read_cli_version.outputs.value) }}
         run: |
           echo "Tag version ${{ github.ref }} is not equal to Cargo.toml version ${{ steps.read_cli_version.outputs.value }}";
           echo "Did you forget to update version in Cargo.toml?"
