--- a/website/package.json
+++ b/website/package.json
@@ -16,7 +16,7 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@radix-ui/react-dropdown-menu": "^2.0.2",
     "@radix-ui/react-label": "^2.0.0",
-    "@radix-ui/react-slot": "^1.0.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.3",
     "@supabase/supabase-js": "^2.8.0",
     "@tanstack/react-query": "^4.24.6",
@@ -30,6 +30,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "final-form": "^4.20.9",
+    "lucide-react": "^0.288.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -38,8 +39,8 @@
     "react-markdown": "^8.0.6",
     "rehype-highlight": "^6.0.0",
     "remark-gfm": "^3.0.1",
-    "tailwind-merge": "^1.10.0",
-    "tailwindcss-animate": "^1.0.5",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "4.9.5",
     "zod": "^3.22.3"
   },
