allow installing multiple versions of an extension

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["supabase"]
 anyhow = "1.0.69"
 clap = { version = "4.1.6", features = ["derive"] }
 dirs = "5.0.1"
+futures = "0.3"
 postgrest = "1.5.0"
 regex = "1.9"
 reqwest = { version = "0.11.14", features = ["json", "native-tls-vendored"] }
