--- a/.github/workflows/manual-release-brew-and-scoop.yaml
+++ b/.github/workflows/manual-release-brew-and-scoop.yaml
@@ -1,21 +1,23 @@
-name: Call a reusable workflow
+name: Release CLI on Homebrew and Scoop
 
 on:
-  push:
-    branches:
-      - chore/release-workflow
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to release (e.g. v1.2.3)"
+        required: true
 
 jobs:
   call-release-homebrew-tap:
     uses: ./.github/workflows/release-homebrew-tap.yaml
     with:
-      tag: v0.1.1
+      tag: ${{ github.event.inputs.tag }}
     secrets:
       homebrew_tap_rw: ${{ secrets.HOMEBREW_TAP_RW }}
 
   call-release-scoop-bucket:
     uses: ./.github/workflows/release-scoop-bucket.yaml
     with:
-      tag: v0.1.1
+      tag: ${{ github.event.inputs.tag }}
     secrets:
       scoop_bucket_rw: ${{ secrets.SCOOP_BUCKET_RW }}
