--- a/.github/workflows/manual-release-brew-and-scoop.yaml
+++ b/.github/workflows/manual-release-brew-and-scoop.yaml
@@ -1,11 +1,16 @@
 name: Release CLI on Homebrew and Scoop
 
+# on:
+#   workflow_dispatch:
+#     inputs:
+#       tag:
+#         description: 'Tag to release (e.g. v1.2.3)'
+#         required: true
+
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: "Tag to release (e.g. v1.2.3)"
-        required: true
+  push:
+    branches:
+      - chore/release-workflow
 
 jobs:
   call-release-homebrew-tap:
