--- a/.github/workflows/manual-release-brew-and-scoop.yaml
+++ b/.github/workflows/manual-release-brew-and-scoop.yaml
@@ -1,16 +1,11 @@
 name: Release CLI on Homebrew and Scoop
 
-# on:
-#   workflow_dispatch:
-#     inputs:
-#       tag:
-#         description: 'Tag to release (e.g. v1.2.3)'
-#         required: true
-
 on:
-  push:
-    branches:
-      - chore/release-workflow
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to release (e.g. v1.2.3)"
+        required: true
 
 jobs:
   call-release-homebrew-tap:
