--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,10 +3,10 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     target-branch: "master"
   - package-ecosystem: "cargo"
     directory: "/cli/"
     schedule:
-      interval: "daily"
+      interval: "weekly"
     target-branch: "master"
