--- a/.github/workflows/release-homebrew-tap.yaml
+++ b/.github/workflows/release-homebrew-tap.yaml
@@ -121,6 +121,8 @@ jobs:
           commit-message: "dbdev brew formula update for version v${{ steps.vars.outputs.version }}"
           title: "dbdev brew formula update for version v${{ steps.vars.outputs.version }}"
           body-path: PR_BODY.md
+          add-paths: |
+            dbdev.rb
           branch: "dbdev/update/v${{ steps.vars.outputs.version }}"
           base: "main"
           committer: "dbdev release-homebrew-tap.yaml workflow <raminder@supabase.io>"
